--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(243, 243, 243);
     margin: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 30px;
 }
 .musica {
     display: flex;
@@ -10,11 +11,13 @@ body {
     align-items: center;
     border: 1px solid black;
     width: 500px;
-    padding: 10px;
+    padding: 15px;
+    margin: auto;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 img {
     width: 400px;
     border-radius: 5%;
     background-color: white;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
