--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     justify-items:auto;
     align-items: center;
     border: 1px solid black;
-    width: 500px;
+    width: 50%;
     padding: 15px;
     margin: auto;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
